--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,7 @@
     <title>AutoCalcWaterTreatment</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
   </head>
-  <body class="body"></body>
+  <body class="body">
+    <div id="root"></div>
+  </body>
 </html>
